# menestrello

./: .gitignore  README.md  pyproject.toml
.config/systemd/user/: menestrello.service
src/menestrello/: constants.py  flask_app.py  generate_static_audio_eng.py  llm_chat_setup.py  main.py  text_to_speech.py
src/menestrello/audio/: __init__.py  generic_tts.py  google_tts.py
src/menestrello/llm/: __init__.py  chat_setup.py  response_format.py
src/menestrello/story/: available_story_characters.txt  available_story_settings.txt  default_developer_prompt.txt  interaction.py  option.py  response.py  story_fragment.py  story_tree.py
src/menestrello/templates/: index.html  results.html
src/menestrello/user/: __init__.py  audio_output_mixin.py  console_user_interaction.py  console_user_io.py  generic_user_interaction.py  generic_user_io.py  keyboard_input_mixin.py  keyboard_listener.py  keyboard_user_interaction.py  keyboard_user_io.py  random_story_prompt_mixin.py  text_output_mixin.py  text_user_interaction_mixin.py  touch_input_mixin.py  touch_user_io.py
src/menestrello/user/random_story_mixin_static/: available_story_characters.txt
tests/: test_main.py  test_mpr121_pins.py  test_sound_player.py  test_touch_input_mixin.py
